run_spec(__dirname, ["vue"], { trailingComma: "none" });
run_spec(__dirname, ["vue"], { trailingComma: "es5" });
run_spec(__dirname, ["vue"], { semi: false });
run_spec(__dirname, ["vue"], { vueIndentScriptAndStyle: true });
run_spec(__dirname, ["vue"], { embeddedLanguageFormatting: "off" });
